# fastapi-claude-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  makefile  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-reviewer.md
.claude/hooks/: guard_layers.py  guard_paths.py  pre_commit_checks.py  ruff_fix.py
.claude/skills/api-client/: SKILL.md
.claude/skills/endpoint/: SKILL.md
.claude/skills/migration/: SKILL.md
.claude/skills/repository/: SKILL.md
.claude/skills/tests/: SKILL.md
.claude/skills/usecase/: SKILL.md
migrations/: env.py
migrations/versions/: 01_3d1a9bc30546_initial.py  02_82e484eb7a8e_unique.py
src/: __main__.py
src/api/common/: exceptions.py  responses.py
src/api/common/events/: base.py
src/api/common/interfaces/: handler.py  mediator.py
src/api/common/mediator/: core.py
src/api/common/middlewares/: __init__.py  exceptions.py  request_id.py
src/api/common/serializers/: orjson.py
src/api/common/websockets/: base.py  query.py  router.py
src/api/v1/: di.py  permission.py  setup.py
src/api/v1/dtos/: __init__.py  auth.py  role.py  status.py  user.py
src/api/v1/endpoints/: __init__.py  auth.py  healthcheck.py
src/api/v1/endpoints/admin/: __init__.py
src/api/v1/handlers/: __init__.py
src/api/v1/handlers/auth/: __init__.py  confirm.py  login.py  logout.py  permission.py  refresh.py  register.py
src/api/v1/handlers/user/: create.py  select.py  select_many.py  update.py
src/application/: provider.py
src/application/common/: exceptions.py  pagination.py  request.py
src/application/common/bus/: __init__.py  _utils.py  core.py  event_bus.py  request_bus.py
src/application/common/events/: __init__.py  base.py  broker.py
src/application/common/interfaces/: broker.py  bus.py  cache.py  event_bus.py  hasher.py  jwt.py  mediator.py  request_bus.py  usecase.py  wrapper.py
src/application/common/mediator/: core.py
src/application/v1/: constants.py
src/application/v1/events/: __init__.py  user.py
src/application/v1/results/: __init__.py  base.py  role.py  user.py
src/application/v1/services/: __init__.py  auth.py  gateway.py
src/application/v1/usecases/: __init__.py
src/application/v1/usecases/auth/: __init__.py  confirm.py  login.py  logout.py  permission.py  refresh.py  register.py
src/application/v1/usecases/user/: __init__.py  create.py  select.py  select_many.py  update.py
src/common/di/: base.py  container.py
src/common/tools/: cache.py  formatter.py
src/consumers/: streams.py  subjects.py
src/consumers/routers/: __init__.py
src/database/: __init__.py  tools.py
src/database/models/: __init__.py
src/database/psql/: __init__.py  manager.py  provider.py  tools.py
src/database/psql/interfaces/: gateway.py
src/database/psql/models/: __init__.py  role.py  user.py
src/database/psql/queries/: base.py  executor.py
src/database/psql/repositories/: __init__.py  base.py  crud.py  role.py  user.py
src/database/psql/types/: __init__.py  role.py  user.py
src/database/queries/: base.py  executor.py
src/database/repositories/: __init__.py  role.py  user.py
src/database/sqla_autoloads/: __init__.py  core.py  datastructures.py  node.py  tools.py
src/database/types/: __init__.py
src/entrypoints/: consumer.py  consumers.py  container.py  http.py  tasks.py
src/entrypoints/server/: __init__.py  granian.py
src/infrastructure/: provider.py
src/infrastructure/broker/: provider.py
src/infrastructure/broker/nats/: __init__.py  connection.py  core.py  message.py  serializer.py
src/infrastructure/cache/: __init__.py  redis.py
src/infrastructure/http/clients/: __init__.py  base.py  request.py
src/infrastructure/http/provider/: __init__.py  aiohttp.py  base.py  response.py
src/infrastructure/http/provider/middleware/: __init__.py  base.py  error.py  logging.py  manager.py
src/infrastructure/logging/: __init__.py  setup.py
src/infrastructure/security/: __init__.py  argon2.py  jwt.py
src/presentation/http/common/: contract.py  exception_handlers.py  responses.py
src/presentation/http/common/guards/: __init__.py  rate_limit.py
src/presentation/http/common/middlewares/: __init__.py  access_log.py  request_id.py
src/presentation/http/common/serializers/: orjson.py
src/presentation/http/common/wrapper/: __init__.py  cache.py
src/presentation/http/v1/contracts/: __init__.py  auth.py  pagination.py  role.py  status.py  user.py
src/presentation/http/v1/endpoints/: __init__.py
src/presentation/http/v1/guards/: __init__.py  auth.py
src/services/interfaces/: __init__.py  cache.py  encrypt.py  pool.py  registry.py  storage.py  transport.py
src/services/internal/: auth.py
src/services/provider/: s3.py
src/services/provider/proxy/: __init__.py  errors.py  pool.py  types.py
src/services/provider/proxy/datastructure/: config.py
src/services/provider/proxy/mapper/: memory.py  redis.py
src/services/provider/proxy/strategy/: base.py  default.py
src/services/provider/websockets/: __init__.py  client.py  pool.py  registry.py  router.py  service.py  storage.py  transport.py  types.py
src/services/provider/websockets/datastructure/: __init__.py  connection.py  message.py
src/services/security/: aes.py  argon2.py
src/settings/: core.py  provider.py
src/tasks/: __init__.py  broker.py
tests/: conftest.py  fakes.py
tests/e2e/: conftest.py  test_admin_users.py  test_auth_flow.py
tests/integration/: conftest.py
tests/integration/database/: test_user_repository.py
tests/unit/: conftest.py  test_auth_service.py  test_login_usecase.py  test_offset_result.py  test_pagination.py  test_select_many_user_usecase.py
(+9 files in other folders)
